k8s/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service-internal
spec:
  selector:
    app: my-app
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /my-app/?(.*)
        backend:
          serviceName: my-app-service-internal
          servicePort: 80
